--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -142,7 +142,6 @@
     maxFillLevels: 5
     fillBaseName: liq-
 
-
 # Filled small
 
 - type: entity
@@ -203,6 +202,18 @@
       vial:
         reagents:
         - ReagentId: CP14BlueAmanita
+          Quantity: 10
+
+- type: entity
+  id: CP14VialSmallDayflin
+  parent: CP14VialSmall
+  suffix: Dayflin
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      vial:
+        reagents:
+        - ReagentId: CP14YellowDayflinPulp
           Quantity: 10
 
 # Filled tiny
