--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -128,6 +128,10 @@ CP14ClothingRingIceFloor: CP14ClothingRingManaGift
 CP14ClothingRingCureWounds: CP14MagicHealingStaff
 CP14ClothingRingShadowStep: CP14ClothingRingManaGift
 
+#2024-11-11
+CP14BlueVial: CP14BlueBottle
+CP14GreenVial: CP14GreenBottle
+
 # <---> CrystallPunk migration zone end
 
 
