crossbolt size fix

--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/lightCrossbow.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/lightCrossbow.yml
@@ -11,7 +11,7 @@
     - state: unwielded
       map: [ base ]
   - type: Item
-    size: Small
+    size: Normal
   - type: Clothing
     equipDelay: 0.45
     unequipDelay: 0.45
