--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
@@ -23,6 +23,7 @@
       collection: MetalThud
   - type: InteractionOutline
   - type: Physics
+    bodyType: Static
   - type: Fixtures
     fixtures:
       fix1:
