--- a/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
@@ -68,11 +68,11 @@
   components:
   - type: StorageFill
     contents:
-      - id: CP14BaseSubdimensionalKey
+      - id: CP14DemiplanKey
         amount: 9
-      - id: CP14BaseSubdimensionalKey
+      - id: CP14DemiplanKey
         amount: 1
         prob: 0.5
-      - id: CP14BaseSubdimensionalKey
+      - id: CP14DemiplanKey
         amount: 1
         prob: 0.5
