--- a/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
@@ -88,6 +88,14 @@
   result: CP14BaseCrowbar
 
 - type: CP14Recipe
+  id: CP14BaseWrench
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14IronBar: 2
+  result: CP14BaseWrench
+
+- type: CP14Recipe
   id: CP14BaseTwoHandedSword
   tag: CP14RecipeAnvil
   craftTime: 4
