--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel.yml
@@ -10,6 +10,29 @@
   placement:
     mode: PlaceFree
   components:
+  - type: Openable
+    sound:
+      collection: bottleOpenSounds
+    closeable: true
+    closeSound:
+      collection: bottleCloseSounds
+  - type: GenericVisualizer
+    visuals:
+      enum.OpenableVisuals.Opened:
+        enum.OpenableVisuals.Layer:
+          True: {visible: false}
+          False: {visible: true}
+  - type: Sprite
+    drawdepth: Mobs
+    sprite: _CP14/Structures/Furniture/barrel.rsi
+    noRot: true
+    layers:
+      - state: barrel_open
+      - state: liq1
+        map: ["enum.SolutionContainerLayers.Fill"]
+        visible: false
+      - state: barrel
+        map: ["enum.OpenableVisuals.Layer"]
   - type: Transform
     noRot: true
   - type: InteractionOutline
@@ -65,15 +88,6 @@
       - !type:DoActsBehavior
         acts: ["Destruction"]
   - type: Appearance
-  - type: Sprite
-    drawdepth: Mobs
-    sprite: _CP14/Structures/Furniture/barrel.rsi
-    noRot: true
-    layers:
-      - state: barrel_open
-      - state: liq1
-        map: ["enum.SolutionContainerLayers.Fill"]
-        visible: false
   - type: SolutionContainerManager
     solutions:
       barrel:
@@ -226,4 +240,16 @@
       barrel:
         reagents:
         - ReagentId: CP14LumiMushroom
+          Quantity: 300
+
+- type: entity
+  id: CP14BarrelDayflin
+  parent: CP14BaseBarrel
+  suffix: Dayflin
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      barrel:
+        reagents:
+        - ReagentId: CP14YellowDayflinPulp
           Quantity: 300
