--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
@@ -23,6 +23,7 @@
       collection: MetalThud
   - type: InteractionOutline
   - type: Physics
+    bodyType: Static
   - type: Fixtures
     fixtures:
       fix1:
@@ -54,6 +55,8 @@
     price: 50
   - type: Anchorable
   - type: Rotatable
+  - type: Transform
+    anchored: true
 
 - type: entity
   name: wooden closet
