--- a/Resources/Prototypes/_CP14/game_presets.yml
+++ b/Resources/Prototypes/_CP14/game_presets.yml
@@ -17,7 +17,7 @@
   showInVote: true
   cP14Allowed: true
   rules:
-    - CP14BanditsRule
+    - CP14SociopathsRule
     - CP14RoundObjectivesRule
 
 - type: gamePreset
