--- a/Resources/Prototypes/_CP14/Roles/Antags/Bandit.yml
+++ b/Resources/Prototypes/_CP14/Roles/Antags/Bandit.yml
@@ -1,16 +1,16 @@
 - type: antag
-  id: CP14Bandit
-  name: cp14-roles-antag-bandit-name
+  id: CP14Sociopath
+  name: cp14-roles-antag-sociopath-name
   antagonist: true
   setPreference: true
-  objective: cp14-roles-antag-bandit-objective
+  objective: cp14-roles-antag-sociopath-objective
   requirements:
   - !type:OverallPlaytimeRequirement
     time: 3600 # 1h
   #guides: TODO
 
 - type: startingGear
-  id: CP14BanditGear
+  id: CP14SociopathGear
   storage:
     back:
     - CP14BaseLockpick
@@ -19,14 +19,13 @@
 
 - type: entity
   parent: BaseMindRoleAntag
-  id: CP14MindRoleBandit
+  id: CP14MindRoleSociopath
   categories: [ ForkFiltered ]
-  name: Bandit Role
-#  description: cp14-roles-antag-bandit-objective
+  name: Sociopath Role
   components:
   - type: MindRole
-    antagPrototype: CP14Bandit
+    antagPrototype: CP14Sociopath
     exclusiveAntag: true
-  - type: CP14BanditRole
+  - type: CP14SociopathRole
   - type: RoleBriefing
-    briefing: cp14-roles-antag-bandit-briefing
+    briefing: cp14-roles-antag-sociopath-briefing
