--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/cabinets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/cabinets.yml
@@ -44,6 +44,8 @@
   - type: Appearance
   - type: Transform
     anchored: true
+  - type: Lock
+    locked: false
 
 - type: entity
   name: wooden cabinet
