--- a/Resources/Prototypes/_CP14/Entities/keyrings.yml
+++ b/Resources/Prototypes/_CP14/Entities/keyrings.yml
@@ -79,12 +79,7 @@
     contents:
     - id: CP14KeyBankEntrance
     - id: CP14KeyBankStaff
-    - id: CP14KeyBankSafe1
-    - id: CP14KeyBankSafe2
-    - id: CP14KeyBankSafe3
-    - id: CP14KeyBankSafe4
-    - id: CP14KeyBankSafe5
-    - id: CP14KeyBankSafe6
+    - id: CP14KeyBankSafe
 
 - type: entity
   parent: CP14BaseKeyRing
@@ -97,9 +92,4 @@
     - id: CP14KeyBankVault
     - id: CP14KeyBankEntrance
     - id: CP14KeyBankStaff
-    - id: CP14KeyBankSafe1
-    - id: CP14KeyBankSafe2
-    - id: CP14KeyBankSafe3
-    - id: CP14KeyBankSafe4
-    - id: CP14KeyBankSafe5
-    - id: CP14KeyBankSafe6
+    - id: CP14KeyBankSafe
