--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T1_cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/T1_cure_wounds.yml
@@ -66,6 +66,7 @@
       - state: cure_wounds
         shader: unshaded
   - type: CP14MagicVisionMarker
+  - type: CP14MagicVisionFade
     visibilityTime: 20
 
 - type: entity
