--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/pen.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/pen.yml
@@ -17,6 +17,11 @@
     - Write
     - Pen
     - CP14InkwellFittable
+  - type: CP14PersonalSignature
+    signSound: 
+      collection: PaperScribbles
+      params:
+        variation: 0.1
 
 # TODO: Чернильницу нужно доделать. Перо должно быть видно, пока оно внутри чернильницы. Предмет должен быть через ItemSlots, чтобы перо вставлять забирать можно было кликом. Нужно добавить прикольные звуки вставляния, выставляния. И добавить механ, который будет требовать периодически макать перо в чернильницу.
 - type: entity
