--- a/Resources/Textures/_CP14/Parallaxes/attributions.yml
+++ b/Resources/Textures/_CP14/Parallaxes/attributions.yml
@@ -1,6 +1,6 @@
 - files: ["Shadows.png"]
   license: "CC-BY-SA-3.0"
-  copyright: "Created by TheShuEd for CrystallPunk14"
+  copyright: "Created by TheShuEd"
   source: "https://github.com/crystallpunk-14/crystall-punk-14"
 
 - files: ["ocean.png", "ocean_overlay.png", "ocean_overlay2.png"]
