--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,4 +1,4 @@
-﻿defaultWindowTitle: CrystallPunk
+﻿defaultWindowTitle: CrystallEdge
 windowIconSet: /Textures/Logo/icon
 splashLogo: /Textures/Logo/logo.png
 
