--- a/Resources/Textures/_CP14/Tiles/GrassLight/attribution.yml
+++ b/Resources/Textures/_CP14/Tiles/GrassLight/attribution.yml
@@ -9,5 +9,5 @@
   - single_edge_SE.png
   - single_edge_SW.png
   license: "CC-BY-SA-3.0"
-  copyright: "Created by TheShuEd for CrystallPunk project"
+  copyright: "Created by TheShuEd"
   source: "https://github.com/crystallpunk-14/crystall-punk-14/pull/290"
