--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/enter_room.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/enter_room.yml
@@ -1,17 +1,17 @@
 - type: Tag
   id: CP14DemiplanEnterRoom
 
-- type: entity
-  id: CP14DemiplanEnterRoomMarker
-  categories: [ ForkFiltered ]
-  parent: BaseRoomMarker
-  name: Demiplan enter room marker
-  components:
-  - type: RoomFill
-    clearExisting: true
-    roomWhitelist:
-      tags:
-      - CP14DemiplanEnterRoom
+#- type: entity
+#  id: CP14DemiplanEnterRoomMarker
+#  categories: [ ForkFiltered ]
+#  parent: BaseRoomMarker
+#  name: Demiplan enter room marker
+#  components:
+#  - type: RoomFill
+#    clearExisting: true
+#    roomWhitelist:
+#      tags:
+#      - CP14DemiplanEnterRoom
 
 # 7x7
 - type: dungeonRoom
